# laba_1

./: .gitignore  README.md  laba_1.pro  main.cpp
laba_1/: client.cpp  client.h  file.cpp  file.h  iobserver.cpp  iobserver.h  laba_1.pro  laba_1_ru_RU.ts  main.cpp  subject.cpp  subject.h  testqtimer.cpp  testqtimer.h
version_2/: CMakeLists.txt
version_2/src/: File.cpp  File.h  IObserver.h  ISubject.h  Publisher.cpp  Publisher.h  main.cpp
